modified:   .gitignore 	modified:   BackEnd/permovdb/pom.xml 	renamed:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/CorsConfig.java -> BackEnd/permovdb/src/main/java/com/permovdb/permovdb/AppConfig.java 	deleted:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/MovieService.java 	new file:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/SecurityConfig.java 	renamed:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/Controller.java -> BackEnd/permovdb/src/main/java/com/permovdb/permovdb/controller/Controller.java 	new file:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/controller/UserController.java 	renamed:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/Movie.java -> BackEnd/permovdb/src/main/java/com/permovdb/permovdb/domain/Movie.java 	renamed:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/Root.java -> BackEnd/permovdb/src/main/java/com/permovdb/permovdb/domain/Root.java 	new file:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/domain/User.java 	new file:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/repository/UserRepository.java 	new file:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/service/UserService.java 	new file:   BackEnd/permovdb/src/main/resources/META-INF/additional-spring-configuration-metadata.json 	modified:   FrontEnd/perMovDb/index.html 	modified:   FrontEnd/perMovDb/package-lock.json 	modified:   FrontEnd/perMovDb/package.json 	modified:   FrontEnd/perMovDb/src/App.css 	modified:   FrontEnd/perMovDb/src/App.jsx 	new file:   FrontEnd/perMovDb/src/assets/collage.jpg 	renamed:    FrontEnd/perMovDb/src/components/MainPage.jsx -> FrontEnd/perMovDb/src/components/DiscoverPage.jsx 	modified:   FrontEnd/perMovDb/src/components/Header.jsx 	modified:   FrontEnd/perMovDb/src/components/Pagination.jsx 	new file:   FrontEnd/perMovDb/src/components/SingleButton.jsx 	modified:   FrontEnd/perMovDb/src/main.jsx 	new file:   FrontEnd/perMovDb/src/pages/Login.jsx 	new file:   Fro

--- a/FrontEnd/perMovDb/src/App.css
+++ b/FrontEnd/perMovDb/src/App.css
@@ -27,3 +27,25 @@
 .detail {
   max-height: 100px;
 }
+.discoverPage {
+  margin-left: 15%;
+  margin-right: 15%;
+}
+.smallPX {
+  margin-top: 0.3%;
+}
+.header {
+  margin-left: 20%;
+  margin-right: 19.6%;
+}
+.top-buttons {
+  transition: 0.3s;
+}
+.top-buttons:hover {
+  background-color: rgb(151, 66, 0);
+  box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
+  transform: translateY(-3px);
+}
+.register {
+  margin-left: 19.3%;
+}
