profile-page, image-handling, watchedlist 	modified:   .gitignore 	deleted:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/asd.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/config/AppConfig.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/config/SecurityConfig.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/controller/Controller.java 	deleted:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/controller/MoviecccController.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/controller/UserController.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/domain/Movie.java 	new file:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/domain/SearchEntry.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/domain/User.java 	deleted:    BackEnd/permovdb/src/main/java/com/permovdb/permovdb/security/CurrentUserResolver.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/security/JwtCookieUtil.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/service/UserService.java 	modified:   FrontEnd/perMovDb/src/App.css 	modified:   FrontEnd/perMovDb/src/App.jsx 	new file:   FrontEnd/perMovDb/src/assets/closed-50-centered.svg 	new file:   FrontEnd/perMovDb/src/assets/opened-50-centered.svg 	modified:   FrontEnd/perMovDb/src/components/CardPlate.jsx 	modified:   FrontEnd/perMovDb/src/components/DiscoverPage.jsx 	modified:   FrontEnd/perMovDb/src/components/Header.jsx 	modified:   FrontEnd/perMovDb/src/components/ProfilePage.jsx 	new file:   FrontEnd/perMovDb/src/components/Search.jsx 	new file:   FrontEnd/perMovDb/src/components/Upload.jsx 	modified:   FrontEnd/perMovDb/src/components/Watchedlist.jsx 	modified:   FrontEnd/perMovDb/src/components/WatchedlistButton.jsx 	modified:   FrontEnd/perMovDb/src/context/UserContext.jsx 	modified:   FrontEnd/perMovDb/src/pages/Login.jsx 	modified:   FrontEnd/perMovDb/sr

--- a/FrontEnd/perMovDb/src/App.css
+++ b/FrontEnd/perMovDb/src/App.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
-body {
+
+html {
   background-color: #fef3c6;
 }
 .card {
@@ -16,7 +17,9 @@ body {
   box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
   transform: translateY(-5px);
 }
-
+.closedEye {
+  margin-left: 0.15rem;
+}
 .poster {
   border-radius: 5px 5px 0px 0px;
 
