--- a/FrontEnd/perMovDb/src/App.css
+++ b/FrontEnd/perMovDb/src/App.css
@@ -12,6 +12,12 @@ html {
   border: 0.01rem solid gray;
   background-color: rgb(241, 241, 241);
 }
+.listButton:hover {
+  z-index: -1;
+  transition: 0.3s;
+  box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
+  transform: translateY(-5px);
+}
 
 .card:hover {
   box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
