--- a/FrontEnd/perMovDb/src/App.css
+++ b/FrontEnd/perMovDb/src/App.css
@@ -18,6 +18,15 @@ html {
   box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
   transform: translateY(-5px);
 }
+.refresh {
+  border-radius: 50%;
+}
+.refresh:hover {
+  transition: 0.3s;
+  box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
+  transform: translateY(-15px);
+  background-color: rgb(179, 77, 0);
+}
 
 .card:hover {
   box-shadow: 5px 8px 16px 5px rgba(170, 68, 1, 0.2);
