filter sidebar 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/controller/MovieController.java 	modified:   BackEnd/permovdb/src/main/java/com/permovdb/permovdb/startup/Startup.java 	modified:   FrontEnd/perMovDb/src/App.css 	modified:   FrontEnd/perMovDb/src/components/Card.jsx 	modified:   FrontEnd/perMovDb/src/components/CardPlate.jsx 	modified:   FrontEnd/perMovDb/src/components/Header.jsx 	new file:   FrontEnd/perMovDb/src/components/MovieFilterSidebar.jsx 	renamed:    FrontEnd/perMovDb/src/components/ToogleSwitch.jsx -> FrontEnd/perMovDb/src/components/ToggleSwitch.jsx 	modified:   FrontEnd/perMovDb/src/components/Top.jsx 	modified:   FrontEnd/perMovDb/src/context/UserContext.jsx 	modified:   FrontEnd/perMovDb/src/pages/DiscoverPage.jsx 	modified:   FrontEnd/perMovDb/src/pages/NewReleases.jsx 	modified:   FrontEnd/perMovDb/src/pages/ProfilePage.jsx

--- a/FrontEnd/perMovDb/src/App.css
+++ b/FrontEnd/perMovDb/src/App.css
@@ -123,3 +123,61 @@ html {
 .login-form {
   margin-left: 15%;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #92400e;
+  border-radius: 3px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #d97706;
+  border-radius: 3px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #f59e0b;
+}
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #f59e0b;
+  cursor: pointer;
+  border: 2px solid #92400e;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #f59e0b;
+  cursor: pointer;
+  border: 2px solid #92400e;
+}
+
+/* SideBar color */
+@layer base {
+  :root {
+    --sidebar: oklch(0.985 0 0);
+    --sidebar-foreground: oklch(0.145 0 0);
+    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.97 0 0);
+    --sidebar-accent-foreground: oklch(0.205 0 0);
+    --sidebar-border: oklch(0.922 0 0);
+    --sidebar-ring: oklch(0.708 0 0);
+  }
+
+  .dark {
+    --sidebar: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.985 0 0);
+    --sidebar-border: oklch(1 0 0 / 10%);
+    --sidebar-ring: oklch(0.439 0 0);
+  }
+}
