--- a/FrontEnd/perMovDb/src/App.css
+++ b/FrontEnd/perMovDb/src/App.css
@@ -45,6 +45,9 @@ html {
   width: 200;
   height: 82%;
 }
+.body {
+  background-color: rgb(133, 60, 0);
+}
 .rating {
   width: 100%;
   height: 100%;
